feat: 实现完整的ACME协议支持和证书自动化管理
🔐 ACME协议实现:
- 新增 ACMEClient 类，支持 Let's Encrypt、ZeroSSL、Buypass 等多个CA
- 实现 HTTP-01 和 DNS-01 两种域名验证方式
- 支持证书申请、续期、撤销和状态查询
- 添加自动续期和批量管理功能

🌐 DNS提供商集成:
- 新增 DNSManager 类，支持 Cloudflare、阿里云、DNSPod
- 实现 DNS 验证记录的自动添加和删除
- 支持多DNS提供商配置和故障转移

🎯 证书服务层:
- 新增 CertificateService 类，提供高级证书管理接口
- 集成用户权限控制和数据库操作
- 完善的错误处理和日志记录

🔧 API增强:
- 更新证书相关API，集成ACME功能
- 添加证书申请、续期、撤销等新端点
- 集成安全验证（CSRF、输入验证、限流）

🧪 测试体系:
- 新增 ACME 客户端和证书服务的单元测试
- 添加现代化测试脚本和配置
- 创建功能演示脚本

📦 依赖更新:
- 添加 acme、josepy、dnspython 等ACME相关依赖
- 更新前端测试配置（Vitest、Playwright）

🎨 前端增强:
- 新增证书创建和服务器创建页面
- 完善环境配置文件
- 更新测试配置和脚本

这次提交完成了SSL证书自动化管理系统的核心ACME协议实现，
为系统提供了完整的证书生命周期管理能力。

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,15 @@
     "preview": "vite preview",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format": "prettier --write src/",
+    "type-check": "vue-tsc --noEmit",
     "test": "vitest",
-    "test:ui": "vitest --ui"
+    "test:unit": "vitest run",
+    "test:coverage": "vitest run --coverage",
+    "test:watch": "vitest watch",
+    "test:ui": "vitest --ui",
+    "test:e2e": "playwright test",
+    "test:e2e:headed": "playwright test --headed",
+    "test:e2e:debug": "playwright test --debug"
   },
   "dependencies": {
     "vue": "^3.3.4",
